<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="symbol_clipboard_section_pinned">Pinned</string>
    <string name="symbol_clipboard_section_unpinned">Unpinned</string>
    <string name="symbol_clipboard_action_paste">Paste</string>
    <string name="symbol_clipboard_action_pin">Pin</string>
    <string name="symbol_clipboard_action_unpin">Unpin</string>
    <string name="symbol_clipboard_action_delete">Delete</string>
    <string name="emoji_category_smileys_emotion">Smileys &amp; Emotions</string>
    <string name="emoji_category_people_body">People</string>
    <string name="emoji_category_animals_nature">Animals &amp; Nature</string>
    <string name="emoji_category_food_drink">Food &amp; Drink</string>
    <string name="emoji_category_travel_places">Travel &amp; Places</string>
    <string name="emoji_category_activities">Activities &amp; Events</string>
    <string name="emoji_category_objects">Objects</string>
    <string name="emoji_category_symbols">Symbols</string>
    <string name="emoji_category_flags">Flags</string>
    <string name="emoji_category_unknown">Other</string>
    <string name="emoji_search">Search emoji</string>
    <string name="symbol_mode_emoji">Emoji</string>
    <string name="symbol_mode_emoticon">Emoticons</string>
    <string name="symbol_mode_symbol">Symbols</string>
    <string name="symbol_mode_clipboard">Clipboard</string>
    <string name="symbol_mode_snippet">Snippets</string>
    <string name="symbol_return_keyboard">Return to keyboard</string>
    <string name="symbol_delete">Delete</string>
    <string name="symbol_history">Recent</string>
    <string name="symbol_empty_history">No recent items yet</string>
    <string name="symbol_empty_clipboard">Copied items will appear here</string>
    <string name="symbol_empty_snippet">Register frequently used text such as email addresses in Settings › Snippets</string>
</resources>
